package Content;

import Enums.PLACE;

public class Notch extends Substance{
    public Notch() {
        super("тысячи зарубок");
    }
}
