public enum Instruments {
    Puncher,
    dottedLineMachine,
    Mallet,
    Scarpel,
    Hammer,
    Chisel
}
