package Items;

public class Machine extends Item{
    public Machine() {
        super("машин");
    }
}
