public class Lihachev extends Person{
    public Lihachev(String firstName, String secondName) {
        super(firstName, secondName);
    }
}
