public class Official extends Profession {
    public Official(String name) {
        super(name);
    }


}
