public abstract class Profession {
    public String name;

    public Profession(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void toBe() {

    }

}