public class Sculptor extends Profession{
    public Sculptor(String name) {
        super(name);
    }

}
