public class ViktorC extends Person{
    public ViktorC(String firstName, String secondName) {
        super(firstName, secondName);
    }
}
