public class ViktorD extends Person{
    public ViktorD(String firstName, String secondName) {
        super(firstName, secondName);
    }
}
