package content;

import interfaces.Adjectiveable;

public class Clot extends Substance{
    public Clot(Adjectiveable adj) {
        super("сгустки", adj);
    }
}
